Update draw rates

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -33,9 +33,11 @@
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
 			<textarea id="wishlist" name="wishlist" rows="5">
-Razia
-Mina
-Thor</textarea>
+Cute Ribbon
+Raikiri
+Water Balloons
+Ripple Harp
+Cold Noodles</textarea>
 			<ul id="queries"></ul>
 			<div id="add-query"></div>
 			<label for="exclude-list">Excluding</label>
@@ -46,77 +48,80 @@ Thor</textarea>
 			<textarea id="draw-data" name="draw-data" rows="10">
 SS Rare Rates 3.00%
 SS Rare Weapon Rates
-  Dainsleif 0.021%
-  Lohengrin 0.021%
-  Claíomh Solais 0.021%
-  Nagelring 0.021%
-  Ascalon 0.021%
-  Greatsword Andalius 0.021%
-  Yyrkoon 0.021%
-  Caladbolg 0.021%
-  Ethereal Lasher 0.021%
-  Hauteclaire 0.021%
-  Hrotti 0.021%
-  Disparia 0.021%
-  Gram 0.021%
-  Lyst Sin 0.021%
-  Mistilteinn 0.021%
-  Hoarfrost Blade Persius 0.021%
-  Phantom Thief Blade 0.021%
-  Arsene 0.021%
-  Heaven's Cloud 0.021%
-  Thunder Dirk Jove 0.021%
-  Twin Helix 0.021%
-  Azoth 0.021%
-  Bloody Scar 0.021%
-  Brionac 0.021%
-  Luin 0.021%
-  Pilum 0.021%
-  Gae Derg 0.700%
-  Gargantua 0.021%
-  Turpin Spear 0.021%
-  Skyrend Spear 0.021%
-  Scarlet Crest Axe 0.021%
-  Way Flyer 0.021%
-  Mettle 0.021%
-  Split End 0.021%
-  Windflash 0.021%
-  Ukonvasara 0.021%
-  Soul Eater 0.021%
-  Vassago 0.021%
-  Forbidden Inferno 0.021%
-  Illusion Scepter 0.021%
-  Starblaze Rings 0.021%
-  Ice Crystal Staff 0.021%
-  Montague's Oath 0.021%
-  Ouroboros 0.021%
-  Kerykeion 0.021%
-  Wing of the Pure 0.021%
-  Capulet's Oath 0.021%
-  Sealed Claustrum 0.021%
-  Gridarvor 0.021%
-  Kalaurops 0.021%
-  Meteora 0.021%
-  Vlisragna 0.021%
-  Stratomizer 0.021%
-  Far Away 0.021%
-  Blushing Blossom Pin 0.021%
-  Brahma Gauntlet 0.021%
-  Magma Gauntlet 0.021%
-  Scarlet Vane 0.021%
-  Ancient Bandages 0.021%
-  Coco & Mimi 0.021%
-  Roseate Aetherial Bow 0.021%
-  Aetherial Bow 0.021%
-  Heroic Bow 0.021%
-  Mobius Strip 0.021%
-  Melodic Sphere 0.021%
-  Ocean Harp 0.021%
-  Sandcastle Song-Lume 0.021%
-  Cords of Heaven Lillah 0.021%
-  Venustas 0.021%
-  Dragon Slayer 0.021%
-  Fudo-Kuniyuki 0.021%
+  Dainsleif 0.020%
+  Lohengrin 0.020%
+  Claíomh Solais 0.020%
+  Nagelring 0.020%
+  Ascalon 0.020%
+  Greatsword Andalius 0.020%
+  Yyrkoon 0.020%
+  Caladbolg 0.020%
+  Ethereal Lasher 0.020%
+  Hauteclaire 0.020%
+  Hrotti 0.020%
+  Disparia 0.020%
+  Gram 0.020%
+  Lyst Sin 0.020%
+  Mistilteinn 0.020%
+  Delta Quartz 0.020%
+  Hoarfrost Blade Persius 0.020%
+  Phantom Thief Blade 0.020%
+  Arsene 0.020%
+  Heaven's Cloud 0.020%
+  Thunder Dirk Jove 0.020%
+  Twin Helix 0.020%
+  Azoth 0.020%
+  Bloody Scar 0.020%
+  Brionac 0.020%
+  Luin 0.020%
+  Pilum 0.020%
+  Gae Derg 0.020%
+  Gargantua 0.020%
+  Turpin Spear 0.020%
+  Skyrend Spear 0.020%
+  Scarlet Crest Axe 0.020%
+  Way Flyer 0.020%
+  Mettle 0.020%
+  Split End 0.020%
+  Windflash 0.020%
+  Ukonvasara 0.020%
+  Soul Eater 0.020%
+  Vassago 0.020%
+  Forbidden Inferno 0.020%
+  Illusion Scepter 0.020%
+  Starblaze Rings 0.020%
+  Ice Crystal Staff 0.020%
+  Montague's Oath 0.020%
+  Ouroboros 0.020%
+  Kerykeion 0.020%
+  Wing of the Pure 0.020%
+  Capulet's Oath 0.020%
+  Sealed Claustrum 0.020%
+  Gridarvor 0.020%
+  Kalaurops 0.020%
+  Meteora 0.020%
+  Vlisragna 0.020%
+  Stratomizer 0.020%
+  Far Away 0.020%
+  Blushing Blossom Pin 0.020%
+  Brahma Gauntlet 0.020%
+  Magma Gauntlet 0.020%
+  Scarlet Vane 0.020%
+  Ancient Bandages 0.020%
+  Coco & Mimi 0.020%
+  Cute Ribbon 0.350%
+  Roseate Aetherial Bow 0.020%
+  Aetherial Bow 0.020%
+  Heroic Bow 0.020%
+  Mobius Strip 0.020%
+  Melodic Sphere 0.020%
+  Ocean Harp 0.020%
+  Sandcastle Song-Lume 0.020%
+  Cords of Heaven Lillah 0.020%
+  Raikiri 0.350%
+  Venustas 0.020%
+  Dragon Slayer 0.020%
+  Fudo-Kuniyuki 0.020%
 SS Rare Summon Rates
  Agni 0.010%
  Athena 0.021%
@@ -163,109 +168,112 @@ SS Rare Summon Rates
  Typhon 0.021%
 S Rare Rates 15.00%
 S Rare Weapon Rates
-  Ember Blade 0.052%
+  Ember Blade 0.050%
   Fragarach 0.166%
-  Ram-Dao 0.052%
-  Tanzanite Sword Mikoh 0.052%
+  Ram-Dao 0.050%
+  Tanzanite Sword Mikoh 0.050%
   Almace 0.166%
-  Aquablade 1.500%
-  Royal Rapier 0.052%
-  Frying Pan 0.052%
-  Grand Edge 0.052%
+  Aquablade 0.050%
+  Royal Rapier 0.050%
+  Frying Pan 0.050%
+  Grand Edge 0.050%
   Ilhoon 0.166%
   Twisted Dagger 0.166%
-  White Flag 0.052%
-  Arondight 0.052%
-  Lyst 0.052%
-  Purity Blade 0.052%
-  Tilvung 0.052%
-  Soulbond Dirk 0.052%
+  White Flag 0.050%
+  Arondight 0.050%
+  Lyst 0.050%
+  Purity Blade 0.050%
+  Tilvung 0.050%
+  Soulbond Dirk 0.050%
   Mirage Knife 0.166%
-  Shrike's Beak 0.052%
+  Shrike's Beak 0.050%
   Stiletto 0.166%
   Fusetto 0.166%
-  Sword of Lisblanc 0.052%
-  Soul Edge 0.052%
-  Puppet Knife 0.052%
-  Scalpel 0.052%
+  Sword of Lisblanc 0.050%
+  Soul Edge 0.050%
+  Puppet Knife 0.050%
+  Scalpel 0.050%
   Sword Breaker 0.166%
-  Wyrm Claw 0.052%
-  Flare Glaive 0.052%
-  Raging Halberd 0.052%
-  Narval 0.052%
-  Titanium Harpoon 0.052%
+  Wyrm Claw 0.050%
+  Flare Glaive 0.050%
+  Raging Halberd 0.050%
+  Narval 0.050%
+  Titanium Harpoon 0.050%
   Trident 0.166%
-  Dreadflayer 0.052%
-  Giant Fork 0.052%
-  Golden Mop 0.052%
+  Dreadflayer 0.050%
+  Giant Fork 0.050%
+  Golden Mop 0.050%
   Partisan 0.166%
   Dragonfliar Cutter 0.166%
   Shura Vhara 0.166%
   Vajranda 0.166%
-  Massive Axe 0.052%
+  Massive Axe 0.050%
   Bullova 0.166%
-  Fremel Hammer 0.052%
-  Great Hammer 0.052%
+  Fremel Hammer 0.050%
+  Great Hammer 0.050%
   Shoka 0.166%
-  Cloud Tomahawk 0.052%
-  Golden Woofer 0.052%
+  Cloud Tomahawk 0.050%
+  Golden Woofer 0.050%
   Horseman's Hammer 0.166%
-  Voulge 0.052%
-  Arson 0.052%
-  Nature's Mystery 0.052%
-  Soothing Torch 0.052%
-  Witch's Broom 0.052%
-  Ice Bough Staff 0.052%
-  Spritewood Staff 0.052%
+  Voulge 0.050%
+  Arson 0.050%
+  Nature's Mystery 0.050%
+  Soothing Torch 0.050%
+  Witch's Broom 0.050%
+  Ice Bough Staff 0.050%
+  Spritewood Staff 0.050%
   Yagrush 0.166%
   Pastoral Staff 0.166%
-  Zhonpeli 0.052%
-  Aerial Cane 0.052%
-  Flower Crown 0.052%
-  Wind-Rhyme Staff 0.052%
+  Zhonpeli 0.050%
+  Aerial Cane 0.050%
+  Flower Crown 0.050%
+  Wind-Rhyme Staff 0.050%
   Holy Cane 0.166%
-  Sacred Codex 0.052%
-  Cursed Cane 0.052%
-  Shadow Scepter 0.052%
-  Dolphin 0.052%
+  Sacred Codex 0.050%
+  Cursed Cane 0.050%
+  Shadow Scepter 0.050%
+  Dolphin 0.050%
   Dragon Tail 0.166%
-  Fire Piece 0.052%
-  Colorful Crackerjack 0.052%
-  Quarrel 0.052%
-  Handy Arquebus 0.052%
+  Fire Piece 0.050%
+  Colorful Crackerjack 0.050%
+  Quarrel 0.050%
+  Handy Arquebus 0.050%
   Wheellock Axe 0.166%
   Crosswind 0.166%
   Snaphance 0.166%
   Swallowtail 0.166%
-  Chain Knuckles 0.052%
-  Crimson Talons 0.052%
-  Cup and Saucer 0.052%
-  Kaiser Knuckles 0.052%
-  Impact Knuckles 0.052%
+  Chain Knuckles 0.050%
+  Crimson Talons 0.050%
+  Cup and Saucer 0.050%
+  Kaiser Knuckles 0.050%
+  Water Balloons 0.750%
+  Impact Knuckles 0.050%
   Mauler 0.166%
-  Metal Glove 0.052%
+  Metal Glove 0.050%
   Neko Punch 0.166%
   Jamadhar 0.166%
-  Merciless Chastening 0.052%
-  Heavy Blast Knuckles 0.052%
-  Misanga Bracelet 0.052%
-  Tiger Fang 0.052%
-  Glass Bow 0.052%
+  Merciless Chastening 0.050%
+  Heavy Blast Knuckles 0.050%
+  Misanga Bracelet 0.050%
+  Tiger Fang 0.050%
+  Glass Bow 0.050%
   Imperial Bow 0.166%
   Sarnga 0.166%
   Aves 0.166%
-  Ice Bow 0.052%
+  Ice Bow 0.050%
   Elfin Bow 0.166%
-  Sutera's Bow 0.052%
+  Sutera's Bow 0.050%
   Shadow Bow 0.166%
-  Aquarium Harp 0.052%
+  Aquarium Harp 0.050%
   Athanasius 0.166%
-  Songsmith's Harp 0.052%
-  Stravaria 0.052%
+  Ripple Harp 0.750%
+  Songsmith's Harp 0.050%
+  Stravaria 0.050%
   Iron Tiger 0.166%
-  Wandering Blade 0.052%
+  Wandering Blade 0.050%
   Fluorithium Blade 0.166%
-  Zanbato 0.052%
+  Tyrian Tiger Blade 0.050%
+  Zanbato 0.050%
   Sauria 0.166%
 S Rare Summon Rates
  Garnet Carbuncle 0.200%
@@ -293,114 +301,115 @@ Rare Weapon Rates
   Anelace 0.692%
   Claymore 0.692%
   Falchion 0.692%
-  Fire Sword 0.210%
+  Fire Sword 0.175%
   Flame Rapier 0.692%
-  Vintage Flat Iron 0.210%
+  Vintage Flat Iron 0.175%
   Ice Sword 0.692%
   Icey Nail 0.692%
-  Shrimp Lure 0.210%
-  White Sword 0.210%
+  Shrimp Lure 0.175%
+  White Sword 0.175%
   Earth Cutlass 0.692%
-  Heavy Metal Comb 0.210%
-  Two-Handed Sword 0.210%
-  Xiphos 0.210%
-  Lightbringer 0.210%
-  Old Sword 0.210%
-  Paper Fan 0.210%
-  Practice Sword 0.210%
-  Blue Crest 0.210%
-  Prism Tear 0.210%
-  Thunder Rapier 0.210%
-  Dark Sword 0.210%
-  Broken Bottle 0.210%
+  Heavy Metal Comb 0.175%
+  Two-Handed Sword 0.175%
+  Xiphos 0.175%
+  Lightbringer 0.175%
+  Old Sword 0.175%
+  Paper Fan 0.175%
+  Practice Sword 0.175%
+  Blue Crest 0.175%
+  Prism Tear 0.175%
+  Thunder Rapier 0.175%
+  Dark Sword 0.175%
+  Broken Bottle 0.175%
   Fire Baselard 0.692%
-  Little Scarlet 0.210%
+  Little Scarlet 0.175%
   Kila 0.692%
   Mailbreaker 0.692%
   Water Kukri 0.692%
   Kris 0.692%
   Emerald Dagger 0.692%
   Leaf Dagger 0.692%
-  Mandau 0.210%
+  Mandau 0.175%
   Holy Kris 0.692%
   Assassin's Dagger 0.692%
-  Bloody Piercer 0.210%
+  Bloody Piercer 0.175%
   Dark Knife 0.692%
-  Switchblade 0.210%
+  Switchblade 0.175%
   Couse 0.692%
   Fire Glaive 0.692%
   Flame Halberd 0.692%
   Langdebeve 0.692%
   Aquan Killer 0.692%
-  Silver Pole 0.210%
+  Silver Pole 0.175%
   Earth Halberd 0.692%
-  Ghillie Fork 0.210%
+  Ghillie Fork 0.175%
   Halberd 0.692%
-  Night Horn 0.210%
-  Iron Pliers 0.210%
-  Soldier Axe 0.210%
+  Night Horn 0.175%
+  Iron Pliers 0.175%
+  Soldier Axe 0.175%
   Harvester 0.692%
   Battle Axe 0.692%
-  Draph Hammer 0.210%
+  Draph Hammer 0.175%
   Earth Zaghnal 0.692%
   Rock Hammer 0.692%
-  Sky Tomahawk 0.210%
+  Sky Tomahawk 0.175%
   Wind Axe 0.692%
-  Morning Star 0.210%
+  Morning Star 0.175%
   Tabar 0.692%
   Thunder Kalinga Axe 0.692%
   Neckchopper 0.692%
-  Forest Hermit Staff 0.210%
-  Rubia Rod 0.210%
-  Torch 0.210%
+  Forest Hermit Staff 0.175%
+  Rubia Rod 0.175%
+  Torch 0.175%
   Cane 0.692%
   Ocean Rod 0.692%
-  Snowman Rod 0.210%
-  Student Notebook 0.210%
+  Snowman Rod 0.175%
+  Student Notebook 0.175%
   Water Rod 0.692%
   Feather Staff 0.692%
-  Stone Pole 0.210%
-  Taiaha 0.210%
+  Stone Pole 0.175%
+  Taiaha 0.175%
   Emerald Cane 0.692%
-  Feather Wand 0.210%
-  Moss Tree Staff 0.210%
+  Feather Wand 0.175%
+  Moss Tree Staff 0.175%
   Wind Rod 0.692%
-  Light Staff 0.210%
+  Light Staff 0.175%
   Shareeravadi 0.692%
   Evil Wand 0.692%
-  The Cross 0.210%
-  Derringer 0.210%
-  Flame Bolt 0.210%
+  The Cross 0.175%
+  Derringer 0.175%
+  Flame Bolt 0.175%
   Grenade 0.692%
   Matchlock 0.692%
-  Sawed-Off Shotgun 0.210%
-  Self Defender 0.210%
+  Sawed-Off Shotgun 0.175%
+  Self Defender 0.175%
   Straight Anchor 0.692%
   Ranger Pistol 0.692%
   Hand Pistol 0.692%
-  Petronel 0.210%
+  Petronel 0.175%
   Jezail 0.692%
-  Chopsticks 0.210%
+  Chopsticks 0.175%
   Fireball 0.692%
   Heated Pata 0.692%
   Pata 0.692%
-  Boogie Plates 0.210%
+  Boogie Plates 0.175%
+  Cold Noodles 2.000%
   Fish Tooth 0.692%
   Gauntlet 0.692%
-  Oven Mitts 0.210%
-  Tattoo Fist 0.210%
+  Oven Mitts 0.175%
+  Tattoo Fist 0.175%
   Tidal Wraps 0.692%
-  Iron Guard 0.210%
-  Mythril Knuckles 0.210%
+  Iron Guard 0.175%
+  Mythril Knuckles 0.175%
   Rock Cutter 0.692%
-  Tonfa 0.210%
-  Enchanted Nail 0.210%
-  Light Buckler 0.210%
+  Tonfa 0.175%
+  Enchanted Nail 0.175%
+  Light Buckler 0.175%
   Mythril Baghnakhs 0.692%
   Whirlwind Wraps 0.692%
-  Blast Knuckles 0.210%
+  Blast Knuckles 0.175%
   Composite Bow 0.692%
-  Flame Bow 0.210%
+  Flame Bow 0.175%
   Mythril Bow 0.692%
   Longbow 0.692%
   Earth Bow 0.692%
@@ -408,8 +417,8 @@ Rare Weapon Rates
   War Bow 0.692%
   Wrapped Bow 0.692%
   Lyre of Lamia 0.692%
-  Bronze Bell 0.210%
-  Night Bell 0.210%
+  Bronze Bell 0.175%
+  Night Bell 0.175%
   Nodachi 0.692%
   Mythril Katana 0.692%
 Rare Summon Rates
@@ -437,7 +446,7 @@ Rare Summon Rates
  Cave Bat 1.041%
  Imp 1.041%
  Skeleton 1.041%</textarea>
-			<small>Built-in draw rates last updated 2017-02-02.</small>
+			<small>Built-in draw rates last updated 2017-02-16.</small>
 		</form>
 		<div id="chart"></div>
 		<p>Bookmark this page to save your wishlist and settings. Updates to the draw rate input list are not currently saved.</p>
