Update draw rates and characters

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -33,11 +33,9 @@
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
 			<textarea id="wishlist" name="wishlist" rows="5">
-Cute Ribbon
-Raikiri
-Water Balloons
-Ripple Harp
-Cold Noodles</textarea>
+Parazonium
+Sunspot Spear
+Standard Albion Bolt</textarea>
 			<ul id="queries"></ul>
 			<div id="add-query"></div>
 			<label for="exclude-list">Excluding</label>
@@ -46,381 +44,388 @@ Cold Noodles</textarea>
 			<input id="max-draws" name="max-draws" type="number" value="100" min="1">
 			<label for="draw-data" title="Draw rate data copy and pasted from the in-game list">Draw rates from in-game</label>
 			<textarea id="draw-data" name="draw-data" rows="10">
-SS Rare Rates 3.00%
+SS Rare Rates 6.00%
 SS Rare Weapon Rates
-  Dainsleif 0.020%
-  Lohengrin 0.020%
-  Claíomh Solais 0.020%
-  Nagelring 0.020%
-  Ascalon 0.020%
-  Greatsword Andalius 0.020%
-  Yyrkoon 0.020%
-  Caladbolg 0.020%
-  Ethereal Lasher 0.020%
-  Hauteclaire 0.020%
-  Hrotti 0.020%
-  Disparia 0.020%
-  Gram 0.020%
-  Lyst Sin 0.020%
-  Mistilteinn 0.020%
-  Delta Quartz 0.020%
-  Hoarfrost Blade Persius 0.020%
-  Phantom Thief Blade 0.020%
-  Arsene 0.020%
-  Heaven's Cloud 0.020%
-  Thunder Dirk Jove 0.020%
-  Twin Helix 0.020%
-  Azoth 0.020%
-  Bloody Scar 0.020%
-  Brionac 0.020%
-  Luin 0.020%
-  Pilum 0.020%
-  Gae Derg 0.020%
-  Gargantua 0.020%
-  Turpin Spear 0.020%
-  Skyrend Spear 0.020%
-  Scarlet Crest Axe 0.020%
-  Way Flyer 0.020%
-  Mettle 0.020%
-  Split End 0.020%
-  Windflash 0.020%
-  Ukonvasara 0.020%
-  Soul Eater 0.020%
-  Vassago 0.020%
-  Forbidden Inferno 0.020%
-  Illusion Scepter 0.020%
-  Starblaze Rings 0.020%
-  Ice Crystal Staff 0.020%
-  Montague's Oath 0.020%
-  Ouroboros 0.020%
-  Kerykeion 0.020%
-  Wing of the Pure 0.020%
-  Capulet's Oath 0.020%
-  Sealed Claustrum 0.020%
-  Gridarvor 0.020%
-  Kalaurops 0.020%
-  Meteora 0.020%
-  Vlisragna 0.020%
-  Stratomizer 0.020%
-  Far Away 0.020%
-  Blushing Blossom Pin 0.020%
-  Brahma Gauntlet 0.020%
-  Magma Gauntlet 0.020%
-  Scarlet Vane 0.020%
-  Ancient Bandages 0.020%
-  Coco & Mimi 0.020%
-  Cute Ribbon 0.350%
-  Roseate Aetherial Bow 0.020%
-  Aetherial Bow 0.020%
-  Heroic Bow 0.020%
-  Mobius Strip 0.020%
-  Melodic Sphere 0.020%
-  Ocean Harp 0.020%
-  Sandcastle Song-Lume 0.020%
-  Cords of Heaven Lillah 0.020%
-  Raikiri 0.350%
-  Venustas 0.020%
-  Dragon Slayer 0.020%
-  Fudo-Kuniyuki 0.020%
+  Dainsleif 0.046%
+  Lohengrin 0.046%
+  Claíomh Solais 0.046%
+  Murgleis 0.046%
+  Nagelring 0.046%
+  Ascalon 0.046%
+  Greatsword Andalius 0.046%
+  Yyrkoon 0.046%
+  Caladbolg 0.046%
+  Ethereal Lasher 0.046%
+  Hauteclaire 0.046%
+  Hrotti 0.046%
+  Blutgang 0.046%
+  Disparia 0.046%
+  Gram 0.046%
+  Lyst Sin 0.046%
+  Mistilteinn 0.046%
+  Hoarfrost Blade Persius 0.046%
+  Phantom Thief Blade 0.046%
+  Arsene 0.046%
+  Heaven's Cloud 0.046%
+  Love Eternal 0.046%
+  Reunion 0.046%
+  Thunder Dirk Jove 0.046%
+  Twin Helix 0.046%
+  Azoth 0.046%
+  Bloody Scar 0.046%
+  Parazonium 0.250%
+  Brionac 0.046%
+  Luin 0.046%
+  Pilum 0.046%
+  Gae Derg 0.046%
+  Gargantua 0.046%
+  Turpin Spear 0.046%
+  Eden 0.046%
+  Ramulus 0.046%
+  Skyrend Spear 0.046%
+  Sunspot Spear 0.450%
+  Scarlet Crest Axe 0.046%
+  Way Flyer 0.046%
+  Mettle 0.046%
+  Split End 0.046%
+  Windflash 0.046%
+  Ukonvasara 0.046%
+  Soul Eater 0.046%
+  Vassago 0.046%
+  Forbidden Inferno 0.046%
+  Illusion Scepter 0.046%
+  Starblaze Rings 0.046%
+  Ice Crystal Staff 0.046%
+  Montague's Oath 0.046%
+  Ouroboros 0.046%
+  Kerykeion 0.046%
+  Wing of the Pure 0.046%
+  Capulet's Oath 0.046%
+  Gambanteinn 0.046%
+  Sealed Claustrum 0.046%
+  Gridarvor 0.046%
+  Kalaurops 0.046%
+  Benedia 0.046%
+  Meteora 0.046%
+  Vlisragna 0.046%
+  AK-4A 0.046%
+  Stratomizer 0.046%
+  Far Away 0.046%
+  Blushing Blossom Pin 0.046%
+  Brahma Gauntlet 0.046%
+  Magma Gauntlet 0.046%
+  Scarlet Vane 0.046%
+  Ancient Bandages 0.046%
+  Coco & Mimi 0.046%
+  Roseate Aetherial Bow 0.046%
+  Aetherial Bow 0.046%
+  Heroic Bow 0.046%
+  Mobius Strip 0.046%
+  Melodic Sphere 0.046%
+  Ocean Harp 0.046%
+  Sandcastle Song-Lume 0.046%
+  Cords of Heaven Lillah 0.046%
+  Venustas 0.046%
+  Dragon Slayer 0.046%
+  Fudo-Kuniyuki 0.046%
 SS Rare Summon Rates
- Agni 0.010%
- Athena 0.021%
- Prometheus 0.021%
- Satyr 0.021%
- Sethlans 0.021%
- Shiva 0.010%
- Twin Elements 0.021%
- Bonito 0.021%
- Ca Ong 0.021%
- Grani 0.021%
- Kaguya 0.010%
- Macula Marius 0.021%
- Neptune 0.021%
- Oceanus 0.021%
- Varuna 0.010%
- Baal 0.021%
- Cybele 0.021%
- Gilgamesh 0.021%
- Medusa 0.021%
- Tezcatlipoca 0.021%
- Titan 0.010%
- Garuda 0.021%
- Morrigna 0.021%
- Nezha 0.021%
- Quetzalcoatl 0.021%
- Setekh 0.021%
- Siren 0.021%
- Zephyrus 0.010%
- Apollo 0.021%
- Grand Order 0.010%
- Hector 0.021%
- Lucifer 0.010%
- Odin 0.021%
- Thor 0.021%
- Vortex Dragon 0.021%
- Zeus 0.010%
- Anubis 0.021%
- Bahamut 0.010%
- Dark Angel Olivia 0.021%
- Hades 0.010%
- Lich 0.021%
- Satan 0.021%
- Typhon 0.021%
+ Agni 0.020%
+ Athena 0.041%
+ Prometheus 0.041%
+ Satyr 0.041%
+ Sethlans 0.041%
+ Shiva 0.020%
+ Twin Elements 0.041%
+ Bonito 0.041%
+ Ca Ong 0.041%
+ Grani 0.041%
+ Kaguya 0.020%
+ Macula Marius 0.041%
+ Neptune 0.041%
+ Oceanus 0.041%
+ Varuna 0.020%
+ Baal 0.041%
+ Cybele 0.041%
+ Gilgamesh 0.041%
+ Medusa 0.041%
+ Tezcatlipoca 0.041%
+ Titan 0.020%
+ Garuda 0.041%
+ Morrigna 0.041%
+ Nezha 0.041%
+ Quetzalcoatl 0.041%
+ Rose Queen 0.041%
+ Setekh 0.041%
+ Siren 0.041%
+ Zephyrus 0.020%
+ Apollo 0.041%
+ Grand Order 0.020%
+ Hector 0.041%
+ Lucifer 0.020%
+ Odin 0.041%
+ Thor 0.041%
+ Vortex Dragon 0.041%
+ Zeus 0.020%
+ Anubis 0.041%
+ Bahamut 0.020%
+ Dark Angel Olivia 0.041%
+ Hades 0.020%
+ Lich 0.041%
+ Satan 0.041%
+ Typhon 0.041%
 S Rare Rates 15.00%
 S Rare Weapon Rates
-  Ember Blade 0.050%
+  Ember Blade 0.051%
   Fragarach 0.166%
-  Ram-Dao 0.050%
-  Tanzanite Sword Mikoh 0.050%
+  Ram-Dao 0.051%
+  Tanzanite Sword Mikoh 0.051%
   Almace 0.166%
-  Aquablade 0.050%
-  Royal Rapier 0.050%
-  Frying Pan 0.050%
-  Grand Edge 0.050%
+  Aquablade 0.051%
+  Royal Rapier 0.051%
+  Frying Pan 0.051%
+  Grand Edge 0.051%
   Ilhoon 0.166%
   Twisted Dagger 0.166%
-  White Flag 0.050%
-  Arondight 0.050%
-  Lyst 0.050%
-  Purity Blade 0.050%
-  Tilvung 0.050%
-  Soulbond Dirk 0.050%
+  White Flag 0.051%
+  Arondight 0.051%
+  Lyst 0.051%
+  Purity Blade 0.051%
+  Tilvung 0.051%
+  Soulbond Dirk 0.051%
   Mirage Knife 0.166%
-  Shrike's Beak 0.050%
+  Shrike's Beak 0.051%
   Stiletto 0.166%
   Fusetto 0.166%
-  Sword of Lisblanc 0.050%
-  Soul Edge 0.050%
-  Puppet Knife 0.050%
-  Scalpel 0.050%
+  Sword of Lisblanc 0.051%
+  Soul Edge 0.051%
+  Puppet Knife 0.051%
+  Scalpel 0.051%
   Sword Breaker 0.166%
-  Wyrm Claw 0.050%
-  Flare Glaive 0.050%
-  Raging Halberd 0.050%
-  Narval 0.050%
-  Titanium Harpoon 0.050%
+  Wyrm Claw 0.051%
+  Flare Glaive 0.051%
+  Raging Halberd 0.051%
+  Narval 0.051%
+  Titanium Harpoon 0.051%
   Trident 0.166%
-  Dreadflayer 0.050%
-  Giant Fork 0.050%
-  Golden Mop 0.050%
+  Dreadflayer 0.051%
+  Giant Fork 0.051%
+  Golden Mop 0.051%
   Partisan 0.166%
   Dragonfliar Cutter 0.166%
   Shura Vhara 0.166%
   Vajranda 0.166%
-  Massive Axe 0.050%
+  Massive Axe 0.051%
   Bullova 0.166%
-  Fremel Hammer 0.050%
-  Great Hammer 0.050%
+  Fremel Hammer 0.051%
+  Great Hammer 0.051%
   Shoka 0.166%
-  Cloud Tomahawk 0.050%
-  Golden Woofer 0.050%
+  Cloud Tomahawk 0.051%
+  Golden Woofer 0.051%
   Horseman's Hammer 0.166%
-  Voulge 0.050%
-  Arson 0.050%
-  Nature's Mystery 0.050%
-  Soothing Torch 0.050%
-  Witch's Broom 0.050%
-  Ice Bough Staff 0.050%
-  Spritewood Staff 0.050%
+  Voulge 0.051%
+  Arson 0.051%
+  Nature's Mystery 0.051%
+  Soothing Torch 0.051%
+  Witch's Broom 0.051%
+  Ice Bough Staff 0.051%
+  Spritewood Staff 0.051%
   Yagrush 0.166%
   Pastoral Staff 0.166%
-  Zhonpeli 0.050%
-  Aerial Cane 0.050%
-  Flower Crown 0.050%
-  Wind-Rhyme Staff 0.050%
+  Zhonpeli 0.051%
+  Aerial Cane 0.051%
+  Flower Crown 0.051%
+  Wind-Rhyme Staff 0.051%
   Holy Cane 0.166%
-  Sacred Codex 0.050%
-  Cursed Cane 0.050%
-  Shadow Scepter 0.050%
-  Dolphin 0.050%
+  Sacred Codex 0.051%
+  Cursed Cane 0.051%
+  Shadow Scepter 0.051%
+  Dolphin 0.051%
   Dragon Tail 0.166%
-  Fire Piece 0.050%
-  Colorful Crackerjack 0.050%
-  Quarrel 0.050%
-  Handy Arquebus 0.050%
+  Fire Piece 0.051%
+  Colorful Crackerjack 0.051%
+  Quarrel 0.051%
+  Handy Arquebus 0.051%
   Wheellock Axe 0.166%
   Crosswind 0.166%
   Snaphance 0.166%
+  Standard Albion Bolt 1.500%
   Swallowtail 0.166%
-  Chain Knuckles 0.050%
-  Crimson Talons 0.050%
-  Cup and Saucer 0.050%
-  Kaiser Knuckles 0.050%
-  Water Balloons 0.750%
-  Impact Knuckles 0.050%
+  Chain Knuckles 0.051%
+  Crimson Talons 0.051%
+  Cup and Saucer 0.051%
+  Kaiser Knuckles 0.051%
+  Impact Knuckles 0.051%
   Mauler 0.166%
-  Metal Glove 0.050%
+  Metal Glove 0.051%
   Neko Punch 0.166%
   Jamadhar 0.166%
-  Merciless Chastening 0.050%
-  Heavy Blast Knuckles 0.050%
-  Misanga Bracelet 0.050%
-  Tiger Fang 0.050%
-  Glass Bow 0.050%
+  Merciless Chastening 0.051%
+  Heavy Blast Knuckles 0.051%
+  Misanga Bracelet 0.051%
+  Tiger Fang 0.051%
+  Glass Bow 0.051%
   Imperial Bow 0.166%
   Sarnga 0.166%
   Aves 0.166%
-  Ice Bow 0.050%
+  Ice Bow 0.051%
   Elfin Bow 0.166%
-  Sutera's Bow 0.050%
+  Sutera's Bow 0.051%
   Shadow Bow 0.166%
-  Aquarium Harp 0.050%
+  Aquarium Harp 0.051%
   Athanasius 0.166%
-  Ripple Harp 0.750%
-  Songsmith's Harp 0.050%
-  Stravaria 0.050%
+  Songsmith's Harp 0.051%
+  Stravaria 0.051%
   Iron Tiger 0.166%
-  Wandering Blade 0.050%
+  Wandering Blade 0.051%
   Fluorithium Blade 0.166%
-  Tyrian Tiger Blade 0.050%
-  Zanbato 0.050%
+  Zanbato 0.051%
   Sauria 0.166%
 S Rare Summon Rates
- Garnet Carbuncle 0.200%
- Hellhound 0.200%
- Hydra 0.200%
- Vrazarek Firewyrm 0.200%
- Angelie Cascade 0.200%
- Aquamarine Carbuncle 0.200%
- Wilinus Icewyrm 0.200%
- Doomworm 0.200%
- Golem 0.200%
- Myconid 0.200%
- Ruination Gargoyle 0.200%
- Stone Golem 0.200%
- Zircon Carbuncle 0.200%
- Elmenhilde Windsprite 0.200%
- Elusious Windwyrm 0.200%
- Griffin 0.200%
- Wyvern 0.200%
- Opal Carbuncle 0.200%
- Pixie 0.200%
- Onyx Carbuncle 0.200%
-Rare Rates 82.00%
+ Garnet Carbuncle 0.190%
+ Hellhound 0.190%
+ Hydra 0.190%
+ Vrazarek Firewyrm 0.190%
+ Angelie Cascade 0.190%
+ Aquamarine Carbuncle 0.190%
+ Wilinus Icewyrm 0.190%
+ Clay Golem 0.190%
+ Doomworm 0.190%
+ Golem 0.190%
+ Myconid 0.190%
+ Ruination Gargoyle 0.190%
+ Stone Golem 0.190%
+ Zircon Carbuncle 0.190%
+ Elmenhilde Windsprite 0.190%
+ Elusious Windwyrm 0.190%
+ Griffin 0.190%
+ Wyvern 0.190%
+ Opal Carbuncle 0.190%
+ Pixie 0.190%
+ Onyx Carbuncle 0.190%
+Rare Rates 79.00%
 Rare Weapon Rates
-  Anelace 0.692%
-  Claymore 0.692%
-  Falchion 0.692%
-  Fire Sword 0.175%
-  Flame Rapier 0.692%
-  Vintage Flat Iron 0.175%
-  Ice Sword 0.692%
-  Icey Nail 0.692%
-  Shrimp Lure 0.175%
-  White Sword 0.175%
-  Earth Cutlass 0.692%
-  Heavy Metal Comb 0.175%
-  Two-Handed Sword 0.175%
-  Xiphos 0.175%
-  Lightbringer 0.175%
-  Old Sword 0.175%
-  Paper Fan 0.175%
-  Practice Sword 0.175%
-  Blue Crest 0.175%
-  Prism Tear 0.175%
-  Thunder Rapier 0.175%
-  Dark Sword 0.175%
-  Broken Bottle 0.175%
-  Fire Baselard 0.692%
-  Little Scarlet 0.175%
-  Kila 0.692%
-  Mailbreaker 0.692%
-  Water Kukri 0.692%
-  Kris 0.692%
-  Emerald Dagger 0.692%
-  Leaf Dagger 0.692%
-  Mandau 0.175%
-  Holy Kris 0.692%
-  Assassin's Dagger 0.692%
-  Bloody Piercer 0.175%
-  Dark Knife 0.692%
-  Switchblade 0.175%
-  Couse 0.692%
-  Fire Glaive 0.692%
-  Flame Halberd 0.692%
-  Langdebeve 0.692%
-  Aquan Killer 0.692%
-  Silver Pole 0.175%
-  Earth Halberd 0.692%
-  Ghillie Fork 0.175%
-  Halberd 0.692%
-  Night Horn 0.175%
-  Iron Pliers 0.175%
-  Soldier Axe 0.175%
-  Harvester 0.692%
-  Battle Axe 0.692%
-  Draph Hammer 0.175%
-  Earth Zaghnal 0.692%
-  Rock Hammer 0.692%
-  Sky Tomahawk 0.175%
-  Wind Axe 0.692%
-  Morning Star 0.175%
-  Tabar 0.692%
-  Thunder Kalinga Axe 0.692%
-  Neckchopper 0.692%
-  Forest Hermit Staff 0.175%
-  Rubia Rod 0.175%
-  Torch 0.175%
-  Cane 0.692%
-  Ocean Rod 0.692%
-  Snowman Rod 0.175%
-  Student Notebook 0.175%
-  Water Rod 0.692%
-  Feather Staff 0.692%
-  Stone Pole 0.175%
-  Taiaha 0.175%
-  Emerald Cane 0.692%
-  Feather Wand 0.175%
-  Moss Tree Staff 0.175%
-  Wind Rod 0.692%
-  Light Staff 0.175%
-  Shareeravadi 0.692%
-  Evil Wand 0.692%
-  The Cross 0.175%
-  Derringer 0.175%
-  Flame Bolt 0.175%
-  Grenade 0.692%
-  Matchlock 0.692%
-  Sawed-Off Shotgun 0.175%
-  Self Defender 0.175%
-  Straight Anchor 0.692%
-  Ranger Pistol 0.692%
-  Hand Pistol 0.692%
-  Petronel 0.175%
-  Jezail 0.692%
-  Chopsticks 0.175%
-  Fireball 0.692%
-  Heated Pata 0.692%
-  Pata 0.692%
-  Boogie Plates 0.175%
-  Cold Noodles 2.000%
-  Fish Tooth 0.692%
-  Gauntlet 0.692%
-  Oven Mitts 0.175%
-  Tattoo Fist 0.175%
-  Tidal Wraps 0.692%
-  Iron Guard 0.175%
-  Mythril Knuckles 0.175%
-  Rock Cutter 0.692%
-  Tonfa 0.175%
-  Enchanted Nail 0.175%
-  Light Buckler 0.175%
-  Mythril Baghnakhs 0.692%
-  Whirlwind Wraps 0.692%
-  Blast Knuckles 0.175%
-  Composite Bow 0.692%
-  Flame Bow 0.175%
-  Mythril Bow 0.692%
-  Longbow 0.692%
-  Earth Bow 0.692%
-  Power Bow 0.692%
-  War Bow 0.692%
-  Wrapped Bow 0.692%
-  Lyre of Lamia 0.692%
-  Bronze Bell 0.175%
-  Night Bell 0.175%
-  Nodachi 0.692%
-  Mythril Katana 0.692%
+  Anelace 0.646%
+  Claymore 0.646%
+  Falchion 0.646%
+  Fire Sword 0.210%
+  Flame Rapier 0.646%
+  Vintage Flat Iron 0.210%
+  Ice Sword 0.646%
+  Icey Nail 0.646%
+  Shrimp Lure 0.210%
+  White Sword 0.210%
+  Earth Cutlass 0.646%
+  Heavy Metal Comb 0.210%
+  Two-Handed Sword 0.210%
+  Xiphos 0.210%
+  Lightbringer 0.210%
+  Old Sword 0.210%
+  Paper Fan 0.210%
+  Practice Sword 0.210%
+  Blue Crest 0.210%
+  Prism Tear 0.210%
+  Thunder Rapier 0.210%
+  Dark Sword 0.210%
+  Broken Bottle 0.210%
+  Fire Baselard 0.646%
+  Little Scarlet 0.210%
+  Kila 0.646%
+  Mailbreaker 0.646%
+  Water Kukri 0.646%
+  Kris 0.646%
+  Emerald Dagger 0.646%
+  Leaf Dagger 0.646%
+  Mandau 0.210%
+  Holy Kris 0.646%
+  Assassin's Dagger 0.646%
+  Bloody Piercer 0.210%
+  Dark Knife 0.646%
+  Switchblade 0.210%
+  Couse 0.646%
+  Fire Glaive 0.646%
+  Flame Halberd 0.646%
+  Langdebeve 0.646%
+  Aquan Killer 0.646%
+  Silver Pole 0.210%
+  Earth Halberd 0.646%
+  Ghillie Fork 0.210%
+  Halberd 0.646%
+  Night Horn 0.210%
+  Iron Pliers 0.210%
+  Soldier Axe 0.210%
+  Harvester 0.646%
+  Battle Axe 0.646%
+  Draph Hammer 0.210%
+  Earth Zaghnal 0.646%
+  Rock Hammer 0.646%
+  Sky Tomahawk 0.210%
+  Wind Axe 0.646%
+  Morning Star 0.210%
+  Tabar 0.646%
+  Thunder Kalinga Axe 0.646%
+  Neckchopper 0.646%
+  Forest Hermit Staff 0.210%
+  Rubia Rod 0.210%
+  Torch 0.210%
+  Cane 0.646%
+  Ocean Rod 0.646%
+  Snowman Rod 0.210%
+  Student Notebook 0.210%
+  Water Rod 0.646%
+  Feather Staff 0.646%
+  Stone Pole 0.210%
+  Taiaha 0.210%
+  Emerald Cane 0.646%
+  Feather Wand 0.210%
+  Moss Tree Staff 0.210%
+  Wind Rod 0.646%
+  Light Staff 0.210%
+  Shareeravadi 0.646%
+  Evil Wand 0.646%
+  The Cross 0.210%
+  Derringer 0.210%
+  Flame Bolt 0.210%
+  Grenade 0.646%
+  Matchlock 0.646%
+  Sawed-Off Shotgun 0.210%
+  Self Defender 0.210%
+  Straight Anchor 0.646%
+  Ranger Pistol 0.646%
+  Hand Pistol 0.646%
+  Petronel 0.210%
+  Jezail 0.646%
+  Chopsticks 0.210%
+  Fireball 0.646%
+  Heated Pata 0.646%
+  Pata 0.646%
+  Boogie Plates 0.210%
+  Fish Tooth 0.646%
+  Gauntlet 0.646%
+  Oven Mitts 0.210%
+  Tattoo Fist 0.210%
+  Tidal Wraps 0.646%
+  Iron Guard 0.210%
+  Mythril Knuckles 0.210%
+  Rock Cutter 0.646%
+  Tonfa 0.210%
+  Enchanted Nail 0.210%
+  Light Buckler 0.210%
+  Mythril Baghnakhs 0.646%
+  Whirlwind Wraps 0.646%
+  Blast Knuckles 0.210%
+  Composite Bow 0.646%
+  Flame Bow 0.210%
+  Mythril Bow 0.646%
+  Longbow 0.646%
+  Earth Bow 0.646%
+  Power Bow 0.646%
+  War Bow 0.646%
+  Wrapped Bow 0.646%
+  Lyre of Lamia 0.646%
+  Bronze Bell 0.210%
+  Night Bell 0.210%
+  Nodachi 0.646%
+  Mythril Katana 0.646%
 Rare Summon Rates
  Minotaur 1.041%
  Twilight Devil 1.041%
@@ -446,7 +451,7 @@ Rare Summon Rates
  Cave Bat 1.041%
  Imp 1.041%
  Skeleton 1.041%</textarea>
-			<small>Built-in draw rates last updated 2017-02-16.</small>
+			<small>Built-in draw rates last updated 2017-03-01.</small>
 		</form>
 		<div id="chart"></div>
 		<p>Bookmark this page to save your wishlist and settings. Updates to the draw rate input list are not currently saved.</p>
